--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
+    "swiper": "^11.0.6",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
